--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta property="og:title" content="MCPEDL Legit" />
+    <meta property="og:description" content="Working in Progress. Please don't sue me!" />
   </head>
   <body>
     <div id="app"></div>
